--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <img src="1707895697747_125833.png" class="i3">
         <div></div>
         <div class="ambu"></div>
-        <p>VG <br> Forever</p>
+        <p>Thalapathy <br> Forever</p>
     
 </body>
 </html>
